less/app.less
body {
    height: 100%;
    background: #272b30;
}

/*Thanks https://github.com/electron/electron/issues/2538 for selecting and dragging */
:not(input):not(textarea),
:not(input):not(textarea)::after,
:not(input):not(textarea)::before {
    -webkit-user-select: none;
    user-select: none;
    cursor: default;
}

:focus,
button,
input,
textarea {
    outline: none; // You should add some other style for :focus to help UX/a11y
}

a:not([draggable=true]),
img:not([draggable=true]) {
    -webkit-user-drag: none;
    user-drag: none;
    /* Technically not supported in Electron yet */
}

a[href^="ftp://"],
a[href^="http://"],
a[href^="https://"] {
    -webkit-user-drag: auto;
    user-drag: auto;
    /* Technically not supported in Electron yet */
}

//copy rule for dialogs
.allow-copy .bootbox-body {
    -webkit-user-select: text;
    user-select: text;
}

.navbar-center {
    position: absolute;
    width: 100%;
    left: 0;
    text-align: center;
    margin: 0 auto;
}

.navbar-toggle {
    z-index: 3;
}

.navbar-center {
    float: left;
    padding: 15px;
    font-size: 14px;
}

.navbar-nav > li > a {
    line-height: 18px !important;
}

#bcStatus {
    width: 23px;
    height: 23px;
    margin-top: 12px;
    margin-left: 15px;
    margin-right: 15px;
}

#bcRestartIcon {
    color: black;
    font-weight: bold;
    position: relative;
    left: 4px;
    top: 2px;
    font-size: 14px;
}

#accountsLocked {
    width: 23px;
    height: 23px;
    margin-top: 12px;
    margin-left: 15px;
    margin-right: 15px;
    color: gold;
    font-weight: bold;
    position: relative;
    top: 1px;
    font-size: 18px;
}

#editorMode {
    display: none;
}

.modal-backdrop {
    height: 100% !important;
}

.bootbox-body {
    word-wrap: break-word;
}

/*License Screen*/
#licenseView {
    width: 85%;
    margin-left: auto;
    margin-right: auto;

    .licenseText {
        height: 20em;
        background: white;
        width: 100%;
        display: block;
        overflow-y: scroll;
        color: black;
    }

    h1 {
        margin-bottom: 35px;
    }

    h3 {
        margin-bottom: 20px;
    }
}

/*About Screen*/
.has-about-menu-loaded {
    img {
        width: 30%;
        margin-left: auto;
        margin-right: auto;
        display: block;
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .appName {
        font-weight: bold;
        font-size: 1.4em;
        text-align: center;
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .appVersion {
        text-align: center;
    }

    .poweredBy {
        width: 200px;
        margin-left: auto;
        margin-right: auto;

        .poweredByLabel {
            font-weight: bold;
            text-align: center;
            margin-top: 30px;
            margin-bottom: 10px;
        }

    }

}

// Settings Screen
.has-settings-menu-loaded .nav-tabs {
    border: none;
}

.passphraseInfoText {
    font-size: 14px;
    margin-top: 10px;
}

#settingsContent {
    border: 1px solid #1c1e22;

    .tabView {
        padding: 20px;
    }

    .loadingSpinner {
        display: block;
        width: 15%;
        margin: 30px auto;
    }

    .accounts {
        table {
            width: 100%;
            border: 1px solid #1c1e22;

            tbody,
            td,
            th,
            thead,
            tr {
                display: block;
            }

            thead {
                border: none;
            }

            .table > thead > tr > th {
                border-bottom: 1px solid #1c1e22;
            }

            tr:after {
                content: ' ';
                display: block;
                visibility: hidden;
                clear: both;
            }

            thead th {
                // height: 30px;
                // text-align: left;
            }

            tbody {
                height: 120px;
                overflow-y: auto;
            }

            tbody td,
            thead th {
                width: 25%;
                word-break: break-all;
                float: left;
            }
        }

        .masterPassphraseInfo {
            border: 1px solid #1c1e22;
            margin-top: 40px;
            margin-bottom: 20px;
            padding: 10px;

            .encryptdNot {
                text-align: center;
                padding: 10px;

                b {
                    display: block;
                    margin-bottom: 10px;
                }

            }

        }

    }

    .inside {}

}

#accountsListTbody {
    .glyphicon-lock {
        margin-right: 5px;
        font-size: 11px;
        top: 0;
        color: red;
    }

}

#noAccountsView {
    width: 70%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5%;

    h1 {
        font-weight: bold;
    }

    img {
        margin-top: 20px;
        margin-bottom: 20px;
    }
}

